Map page half made - globe

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" href="./assets/common.css">
     <link rel="stylesheet" href="./assets/index.css">
     <link rel="stylesheet" href="./assets/tooltip.css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
@@ -50,7 +51,7 @@
 
         <nav>
             <ul>
-                <li><a href="#" title="Map">Map</a></li>
+                <li><a href="./pages/map.html" title="Map">Map</a></li>
                 <li><a href="#" title="Trips">Trips</a></li>
                 <li><a href="#" title="Blog">Blog</a></li>
                 <li><a href="#" title="Gallery">Gallery</a></li>
