Small improvements in map pages

--- a/pages/map.html
+++ b/pages/map.html
@@ -46,20 +46,14 @@
     
     <nav class="side-nav" id="side_nav">
         <ul>
-            <li><a id="globe_link" class="maps-sidenav-link active" href="#" title="Globe" >Globe</a></li>
-            <li><a id="countries_link" class="maps-sidenav-link" href="#" title="Countries">Countries</a></li>
+            <li><a id="countries_link" class="maps-sidenav-link active" href="#" title="Countries">Countries</a></li>
+            <li><a id="globe_link" class="maps-sidenav-link" href="#" title="Globe" >Globe</a></li>
             <li><a id="pins_link" class="maps-sidenav-link" href="#" title="Pins">Pins</a></li>
         </ul>
     </nav>
 
 
     <div id="map_content_wrapper">
-
-
-        <div class="map-content" id="globe_cont">
-            <svg id="globe"></svg>
-        </div>
-
 
         <div class="map-content tooltip-parent" id="countries_cont">
             <div class="countries-bg"></div>
@@ -78,6 +72,11 @@
 
             <h2 id="countries_title"><span>26</span> and still counting ...</h2>
             <div id="countries_list"></div>
+        </div>
+
+
+        <div class="map-content" id="globe_cont">
+            <svg id="globe"></svg>
         </div>
 
 
