--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <nav>
             <ul>
                 <li><a href="./pages/map.html" title="Map">Map</a></li>
-                <li><a href="#" title="Trips">Trips</a></li>
+                <li><a href="./pages/trips.html" title="Trips">Trips</a></li>
                 <li><a href="#" title="Blog">Blog</a></li>
                 <li><a href="#" title="Gallery">Gallery</a></li>
             </ul>
