--- a/pages/map.html
+++ b/pages/map.html
@@ -36,7 +36,7 @@
         <nav>
             <ul>
                 <li><a href="#" title="Map" class="active-page">Map</a></li>
-                <li><a href="#" title="Trips">Trips</a></li>
+                <li><a href="./trips.html" title="Trips">Trips</a></li>
                 <li><a href="#" title="Blog">Blog</a></li>
                 <li><a href="#" title="Gallery">Gallery</a></li>
             </ul>
