Add moving background to any big image

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="./assets/common.css">
     <link rel="stylesheet" href="./assets/index.css">
     <link rel="stylesheet" href="./assets/tooltip.css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
@@ -65,6 +64,6 @@
         <a href="https://www.instagram.com/bardzo_maly_czlowiek/" target="_blank" title="Instagram" class="right-icon"><svg  xmlns="http://www.w3.org/2000/svg"  class="social-link"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-brand-instagram"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4 8a4 4 0 0 1 4 -4h8a4 4 0 0 1 4 4v8a4 4 0 0 1 -4 4h-8a4 4 0 0 1 -4 -4z" /><path d="M9 12a3 3 0 1 0 6 0a3 3 0 0 0 -6 0" /><path d="M16.5 7.5v.01" /></svg></a>
     </footer>
 
-    <script src="./scripts/index.js"></script>
+    <script src="./scripts/moving_bg.js"></script>
 </body>
 </html>
