--- a/pages/map.html
+++ b/pages/map.html
@@ -95,9 +95,10 @@
     </footer>
     
 
-    <script src="../scripts/globe.js"></script>
-    <script src="../scripts/map_nav.js"></script>
+    <script src="../scripts/moving_bg.js"></script>
     <script src="../scripts/countries_list.js"></script>
+    <script src="../scripts/map_nav.js"></script>
+    <script src="../scripts/globe.js"></script>
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script src="../scripts/pins_map.js"></script>
 </body>
