--- a/pages/trips.html
+++ b/pages/trips.html
@@ -39,7 +39,8 @@
     </header>
 
     <div id="trips_content_wrapper">
-        <div class="trips-top-bg tooltip-parent">
+        <div class="trips-top-banner tooltip-parent">
+            <div class="trips-bg"></div>
             <div id="sd_container">
                 <div class="arrow"></div>
                 <div class="arrow"></div>
@@ -83,7 +84,7 @@
                             <img src="../images/canada/thumb2.jpg" alt="Image from trip" class="trip-card-bg">
 
                             <div class="trip-card-content">
-                                <strong>CANADA</strong>
+                                <strong>Canada</strong>
                                 <p>October 2024</p>
                             </div>
                         </div>
@@ -256,6 +257,7 @@
         <a href="https://www.instagram.com/bardzo_maly_czlowiek/" target="_blank" title="Instagram" class="right-icon"><svg  xmlns="http://www.w3.org/2000/svg"  class="social-link"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-brand-instagram"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4 8a4 4 0 0 1 4 -4h8a4 4 0 0 1 4 4v8a4 4 0 0 1 -4 4h-8a4 4 0 0 1 -4 -4z" /><path d="M9 12a3 3 0 1 0 6 0a3 3 0 0 0 -6 0" /><path d="M16.5 7.5v.01" /></svg></a>
     </footer>
     
+    <script src="../scripts/moving_bg.js"></script>
     <script src="../scripts/scroll_button.js"></script>
 </body>
 </html>
