--- a/pages/trips.html
+++ b/pages/trips.html
@@ -22,8 +22,6 @@
 </head>
 
 <body>
-    <!-- TODOS: -->
-    <!-- add typing animation to h2 -->
 
     <header>
         <a href="../index.html"><img src="../images/qubix_black.png" alt="Qubix logo" class="logo" /></a>
@@ -32,8 +30,8 @@
             <ul>
                 <li><a href="./map.html" title="Map">Map</a></li>
                 <li><a href="#" title="Trips" class="active-page">Trips</a></li>
-                <li><a href="#" title="Blog">Blog</a></li>
-                <li><a href="#" title="Gallery">Gallery</a></li>
+                <li><a href="./blog.html" title="Blog">Blog</a></li>
+                <li><a href="./gallery.html" title="Gallery">Gallery</a></li>
             </ul>
         </nav>
     </header>
@@ -74,14 +72,13 @@
         <div class="trips-white-cont">
             <div class="trips-content">
                 <h2>The Adventure Log</h2>
-                <!-- Embrace the wanderlust -->
 
                 <h6>2024</h6>
 
                 <div class="trips-stack">
                     <a href="#" class="trip-link">
                         <div class="trip-card">
-                            <img src="../images/canada/thumb2.jpg" alt="Image from trip" class="trip-card-bg">
+                            <img src="../images/trips/canada/thumb2.jpg" alt="Image from trip" class="trip-card-bg">
 
                             <div class="trip-card-content">
                                 <strong>Canada</strong>
@@ -92,7 +89,7 @@
 
                     <a href="#" class="trip-link">
                         <div class="trip-card">
-                            <img src="../images/polynesia/thumb.jpg" alt="Image from trip" class="trip-card-bg">
+                            <img src="../images/trips/polynesia/thumb.jpg" alt="Image from trip" class="trip-card-bg">
 
                             <div class="trip-card-content">
                                 <strong>Polynesia</strong>
@@ -103,7 +100,7 @@
 
                     <a href="#" class="trip-link">
                         <div class="trip-card">
-                            <img src="../images/madeira/thumb.jpg" alt="Image from trip" class="trip-card-bg">
+                            <img src="../images/trips/madeira/thumb.jpg" alt="Image from trip" class="trip-card-bg">
 
                             <div class="trip-card-content">
                                 <strong>Madeira</strong>
@@ -114,7 +111,7 @@
 
                     <a href="#" class="trip-link">
                         <div class="trip-card">
-                            <img src="../images/portugal/thumb.jpg" alt="Image from trip" class="trip-card-bg">
+                            <img src="../images/trips/portugal/thumb.jpg" alt="Image from trip" class="trip-card-bg">
 
                             <div class="trip-card-content">
                                 <strong>Portugal</strong>
@@ -125,7 +122,7 @@
 
                     <a href="#" class="trip-link">
                         <div class="trip-card">
-                            <img src="../images/korea/thumb.jpg" alt="Image from trip" class="trip-card-bg">
+                            <img src="../images/trips/korea/thumb.jpg" alt="Image from trip" class="trip-card-bg">
 
                             <div class="trip-card-content">
                                 <strong>South Korea & Taiwan</strong>
@@ -140,7 +137,7 @@
                 <div class="trips-stack">
                     <a href="#" class="trip-link">
                         <div class="trip-card">
-                            <img src="../images/gran_canaria/thumb.jpg" alt="Image from trip" class="trip-card-bg">
+                            <img src="../images/trips/gran_canaria/thumb.jpg" alt="Image from trip" class="trip-card-bg">
 
                             <div class="trip-card-content">
                                 <strong>Gran Canaria</strong>
@@ -151,7 +148,7 @@
 
                     <a href="#" class="trip-link">
                         <div class="trip-card">
-                            <img src="../images/mauritius/thumb.jpg" alt="Image from trip" class="trip-card-bg">
+                            <img src="../images/trips/mauritius/thumb.jpg" alt="Image from trip" class="trip-card-bg">
 
                             <div class="trip-card-content">
                                 <strong>Mauritius</strong>
@@ -162,7 +159,7 @@
 
                     <a href="#" class="trip-link">
                         <div class="trip-card">
-                            <img src="../images/namibia/thumb.jpg" alt="Image from trip" class="trip-card-bg">
+                            <img src="../images/trips/namibia/thumb.jpg" alt="Image from trip" class="trip-card-bg">
 
                             <div class="trip-card-content">
                                 <strong>Namibia</strong>
@@ -173,7 +170,7 @@
 
                     <a href="#" class="trip-link">
                         <div class="trip-card">
-                            <img src="../images/tunisia/thumb.jpg" alt="Image from trip" class="trip-card-bg">
+                            <img src="../images/trips/tunisia/thumb.jpg" alt="Image from trip" class="trip-card-bg">
 
                             <div class="trip-card-content">
                                 <strong>Tunisia</strong>
@@ -188,7 +185,7 @@
                 <div class="trips-stack">
                     <a href="#" class="trip-link">
                         <div class="trip-card">
-                            <img src="../images/bergen/thumb.jpg" alt="Image from trip" class="trip-card-bg">
+                            <img src="../images/trips/bergen/thumb.jpg" alt="Image from trip" class="trip-card-bg">
 
                             <div class="trip-card-content">
                                 <strong>Bergen, Norway</strong>
@@ -199,7 +196,7 @@
 
                     <a href="#" class="trip-link">
                         <div class="trip-card">
-                            <img src="../images/tenerife/thumb.jpg" alt="Image from trip" class="trip-card-bg">
+                            <img src="../images/trips/tenerife/thumb.jpg" alt="Image from trip" class="trip-card-bg">
 
                             <div class="trip-card-content">
                                 <strong>Tenerife</strong>
@@ -210,7 +207,7 @@
 
                     <a href="#" class="trip-link">
                         <div class="trip-card">
-                            <img src="../images/denmark/thumb.jpg" alt="Image from trip" class="trip-card-bg" style="object-position:30% center;">
+                            <img src="../images/trips/denmark/thumb.jpg" alt="Image from trip" class="trip-card-bg" style="object-position:30% center;">
 
                             <div class="trip-card-content">
                                 <strong>Denmark</strong>
@@ -221,7 +218,7 @@
 
                     <a href="#" class="trip-link">
                         <div class="trip-card">
-                            <img src="../images/nepal/thumb.jpg" alt="Image from trip" class="trip-card-bg">
+                            <img src="../images/trips/nepal/thumb.jpg" alt="Image from trip" class="trip-card-bg">
 
                             <div class="trip-card-content">
                                 <strong>Nepal</strong>
@@ -236,7 +233,7 @@
                 <div class="trips-stack">
                     <a href="#" class="trip-link">
                         <div class="trip-card">
-                            <img src="../images/krk_to_baltik/thumb.jpg" alt="Image from trip" class="trip-card-bg">
+                            <img src="../images/trips/krk_to_baltik/thumb.jpg" alt="Image from trip" class="trip-card-bg">
 
                             <div class="trip-card-content">
                                 <strong>Krk -> Baltik Sea, bike trip</strong>
