--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             <ul>
                 <li><a href="./pages/map.html" title="Map">Map</a></li>
                 <li><a href="./pages/trips.html" title="Trips">Trips</a></li>
-                <li><a href="#" title="Blog">Blog</a></li>
-                <li><a href="#" title="Gallery">Gallery</a></li>
+                <li><a href="./pages/blog.html" title="Blog">Blog</a></li>
+                <li><a href="./pages/gallery.html" title="Gallery">Gallery</a></li>
             </ul>
         </nav>
     </header>
