--- a/pages/map.html
+++ b/pages/map.html
@@ -37,8 +37,8 @@
             <ul>
                 <li><a href="#" title="Map" class="active-page">Map</a></li>
                 <li><a href="./trips.html" title="Trips">Trips</a></li>
-                <li><a href="#" title="Blog">Blog</a></li>
-                <li><a href="#" title="Gallery">Gallery</a></li>
+                <li><a href="./blog.html" title="Blog">Blog</a></li>
+                <li><a href="./gallery.html" title="Gallery">Gallery</a></li>
             </ul>
         </nav>
     </header>
