--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>JakubPietrzyk</title>
     <meta name="description" content="Jakub Pietrzyk - Travel portfolio and blog">
-    <meta name="keywords" content="Jakub Pietrzyk, travel, portfolio, blog">
+    <meta name="keywords" content="Jakub Pietrzyk, travel, portfolio, blog, qubix">
     <meta name="author" content="Jakub Pietrzyk">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Jakub Pietrzyk - Travel portfolio and blog">
