First work on canada trip

--- a/pages/trips.html
+++ b/pages/trips.html
@@ -76,9 +76,9 @@
                 <h6>2024</h6>
 
                 <div class="trips-stack">
-                    <a href="#" class="trip-link">
+                    <a href="./trips/canada.html" class="trip-link">
                         <div class="trip-card">
-                            <img src="../images/trips/canada/thumb2.jpg" alt="Image from trip" class="trip-card-bg">
+                            <img src="../images/trips/canada/thumb.jpg" alt="Image from trip" class="trip-card-bg">
 
                             <div class="trip-card-content">
                                 <strong>Canada</strong>
