Small improvements in blog, canada and gallery

--- a/pages/trips/canada.html
+++ b/pages/trips/canada.html
@@ -141,7 +141,7 @@
 
             <p>
                 After Niagara, we took a slightly more scenic route back to the airport. And there, waiting in the rental lot, was… a Ford Mustang. Meanwhile, our rental company told us a Kia SUV was a “similar” car to a Charger. :|
-                We had a laughed about it and headed for security.
+                We laughed about it and headed for security check.
             </p>
 
 
@@ -239,7 +239,7 @@
             <h6>Toronto and the Journey Home</h6>
             <p>
                 We landed in Toronto (instead of Hamilton, where our return flight was departing from), so we had to transfer from one airport to the other. Luckily, we had a 12-hour layover, which gave us enough time for a bit of sightseeing.
-                Even though we were exhausted, we made our way to the CN Tower and took a walk around downtown. It happened that we arrived on the day of the Toronto Marathon, so the city was buzzing with energy. We had lunch on a bench by the sea and then headed for the bus to Hamilton.
+                Even though we were exhausted, we made our way to the CN Tower and took a walk around downtown. It happened that we arrived on the day of the Toronto Marathon, so the city was buzzing with energy. We had lunch on a bench by the lake and then headed for the bus to Hamilton.
                 Running on just a few hours of sleep over two days, we were seriously feeling the exhaustion. And we still had a 10-hour layover in Keflavík ahead of us. Thankfully, we had no intentions to wander around Iceland this time - after landing, we inflated our sleeping mats and crashed by the heaters. After a bit of rest, we were back in the air, heading to Warsaw.
                 By the time we landed in Poland, we were completely wiped out. Fortunately, when we were booking the planes, we decided not to go back to Krakow by train and bought a 30-minute LOT flight instead. It was such a good decision. Finally, after two days of flights and layovers, we arrived in Kraków, where our friend Krzyś picked us up.
                 Please, no more +3 layovers flights.
