Adjust polynesia to release

--- a/pages/trips.html
+++ b/pages/trips.html
@@ -87,7 +87,8 @@
                         </div>
                     </a>
 
-                    <a href="./trips/polynesia.html" class="trip-link">
+                    <!-- <a href="./trips/polynesia.html" class="trip-link"> -->
+                    <a href="#" class="trip-link">
                         <div class="trip-card">
                             <img src="../images/trips/polynesia/thumb.jpg" alt="Image from trip" class="trip-card-bg">
 
