--- a/pages/trips/polynesia.html
+++ b/pages/trips/polynesia.html
@@ -70,7 +70,7 @@
             <p>
                 I was a young teenager when Facebook recommended me a travel profile called "Boczne Szlaki". It was run by a guy who was hitchhiking around the world and had traveled all over South and Central America. I had been fascinated by travel since childhood, but at that time, I never would have thought I could go anywhere beyond Europe. It was this profile that made me believe in myself and realize that fulfilling dreams of visiting the most remote corners of the Earth is real and achievable - and that even I could do it.
             </p>
-            <a href="https://www.facebook.com/boczneszlaki/">Boczne szlaki</a>
+            <a href="https://www.facebook.com/boczneszlaki/" target="_blank">Boczne szlaki</a>
             <br />
 
             <p>
@@ -114,7 +114,7 @@
             <span class="post-img-label">Flights</span>
             <br />
 
-            
+            <h6>To be continued ... </h6>
 
         </div>
 
