Add northwest france trip

--- a/pages/trips.html
+++ b/pages/trips.html
@@ -87,6 +87,17 @@
                         </div>
                     </a>
 
+                    <a href="#" class="trip-link">
+                        <div class="trip-card">
+                            <img src="../images/trips/north_west_france/thumb.jpg" alt="Image from trip" class="trip-card-bg">
+
+                            <div class="trip-card-content">
+                                <strong>North-West France</strong>
+                                <p>September 2024</p>
+                            </div>
+                        </div>
+                    </a>
+
                     <a href="./trips/polynesia.html" class="trip-link">
                         <div class="trip-card">
                             <img src="../images/trips/polynesia/thumb.jpg" alt="Image from trip" class="trip-card-bg">
@@ -236,7 +247,7 @@
                             <img src="../images/trips/krk_to_baltik/thumb.jpg" alt="Image from trip" class="trip-card-bg">
 
                             <div class="trip-card-content">
-                                <strong>Krk -> Baltik Sea, bike trip</strong>
+                                <strong>Baltik Sea bike trip</strong>
                                 <p>June 2021</p>
                             </div>
                         </div>
