Add northwest france page

--- a/pages/trips.html
+++ b/pages/trips.html
@@ -87,9 +87,9 @@
                         </div>
                     </a>
 
-                    <a href="#" class="trip-link">
+                    <a href="./trips/northwest_france.html" class="trip-link">
                         <div class="trip-card">
-                            <img src="../images/trips/north_west_france/thumb.jpg" alt="Image from trip" class="trip-card-bg">
+                            <img src="../images/trips/northwest_france/thumb.jpg" alt="Image from trip" class="trip-card-bg">
 
                             <div class="trip-card-content">
                                 <strong>North-West France</strong>
