Add new trips to trips page

--- a/pages/trips.html
+++ b/pages/trips.html
@@ -74,6 +74,33 @@
             <div class="trips-content">
                 <h2>The Adventure Log</h2>
 
+                <h6>2025</h6>
+
+                <div class="trips-stack">
+                    <a href="#" class="trip-link">
+                        <div class="trip-card">
+                            <img src="../images/trips/malaysia/thumb.jpg" alt="Image from trip" class="trip-card-bg">
+
+                            <div class="trip-card-content">
+                                <strong>Malaysia</strong>
+                                <p>March 2025</p>
+                            </div>
+                        </div>
+                    </a>
+
+                    <a href="#" class="trip-link">
+                        <div class="trip-card">
+                            <img src="../images/trips/west_australia/thumb.jpg" alt="Image from trip" class="trip-card-bg">
+
+                            <div class="trip-card-content">
+                                <strong>Western Australia</strong>
+                                <p>February 2025</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+
                 <h6>2024</h6>
 
                 <div class="trips-stack">
@@ -134,10 +161,21 @@
 
                     <a href="#" class="trip-link">
                         <div class="trip-card">
+                            <img src="../images/trips/taiwan/thumb.jpg" alt="Image from trip" class="trip-card-bg">
+
+                            <div class="trip-card-content">
+                                <strong>Taiwan</strong>
+                                <p>February 2024</p>
+                            </div>
+                        </div>
+                    </a>
+
+                    <a href="#" class="trip-link">
+                        <div class="trip-card">
                             <img src="../images/trips/korea/thumb.jpg" alt="Image from trip" class="trip-card-bg">
 
                             <div class="trip-card-content">
-                                <strong>South Korea & Taiwan</strong>
+                                <strong>South Korea</strong>
                                 <p>February 2024</p>
                             </div>
                         </div>
