Add new photos to the gallery

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -73,6 +73,19 @@
             <div class="trips-content">
                 <h2>World through my eyes</h2>
 
+                <h6>Australia (West)</h6>
+                <div class="photos-stack">
+                    <div class="gallery-img"><img src="../images/gallery/australia1.jpg" /></div>
+                    <div class="gallery-img"><img src="../images/gallery/australia2.jpg" /></div>
+                    <div class="gallery-img"><img src="../images/gallery/australia3.jpg" /></div>
+                    <div class="gallery-img"><img src="../images/gallery/australia4.jpg" /></div>
+                    <div class="gallery-img"><img src="../images/gallery/australia5.jpg" /></div>
+                    <div class="gallery-img"><img src="../images/gallery/australia6.jpg" /></div>
+                    <div class="gallery-img"><img src="../images/gallery/australia7.jpg" /></div>
+                    <div class="gallery-img"><img src="../images/gallery/australia8.jpg" /></div>
+                    <div class="gallery-img"><img src="../images/gallery/australia9.jpg" /></div>
+                </div>
+
                 <h6>Babia Mountain</h6>
                 <div class="photos-stack">
                     <div class="gallery-img"><img src="../images/gallery/babia1.jpg" /></div>
@@ -130,6 +143,14 @@
                     <div class="gallery-img"><img src="../images/gallery/madeira4.jpg" /></div>
                     <div class="gallery-img"><img src="../images/gallery/madeira5.jpg" /></div>
                     <div class="gallery-img"><img src="../images/gallery/madeira6.jpg" /></div>
+                </div>
+
+                <h6>Malaysia</h6>
+                <div class="photos-stack">
+                    <div class="gallery-img"><img src="../images/gallery/malaysia1.jpg" /></div>
+                    <div class="gallery-img"><img src="../images/gallery/malaysia2.jpg" /></div>
+                    <div class="gallery-img"><img src="../images/gallery/malaysia3.jpg" /></div>
+                    <div class="gallery-img"><img src="../images/gallery/malaysia5.jpg" /></div>
                 </div>
 
                 <h6>Mauritius</h6>
@@ -217,6 +238,12 @@
                 <h6>San Francisco</h6>
                 <div class="photos-stack">
                     <div class="gallery-img"><img src="../images/gallery/san_francisco1.jpg" /></div>
+                </div>
+
+                <h6>Singapore</h6>
+                <div class="photos-stack">
+                    <div class="gallery-img"><img src="../images/gallery/singapore1.jpg" /></div>
+                    <div class="gallery-img"><img src="../images/gallery/singapore2.jpg" /></div>
                 </div>
 
                 <h6>South Korea</h6>
